--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # ignore the dataset file as it's machine dependant
 lab3/3.1-flowers_create_dataset.py
 
-# untrack datasets
+# untrack datasets and corpus
 Datasets/
 datasets/
+corpus/
 
 *.conf
 *.h5
